# wb-search-rank-bot

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
bot/: config.py  main.py  utils.py
bot/controller/: search.py  wbsearch_client.py
bot/schemas/: error_strings.py  product_schemas.py  string_constants.py
bot/service/: search.py  wbsearch_client.py
